# btkick

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: bt.rs  config.rs  main.rs  tui.rs
